--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 <title>Enter tag here</title>
 </head>
     <body>
-        <header>
-            <h3></h3>
+        <div class="top location"></div>
+        <header class="nav MaxWH location flex flex_j_SB">
+            <div>logo</div>
+            <div class="nav-menu flex flex_j_SB MaxWH disp location">
+                <div>here</div>
+                <div>there</div>
+                <div>anywhere</div>
+                <div>gear</div>
+            </div>
+            <div class="nav-menu flex flex_j_SB MaxWH tiny flex_rowR location">
+                <p>Menu!</p>
+            </div>
         </header>
         <main>
             <section>
