menu with dropdown complete

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </div>
         </header>
-        <div class="tiny gone flex_col" id="dropdown">
+        <div class="gone flex_col" id="dropdown">
             <div class="nav-drop flex flex_Ai_SA location">
                 <div>
                     <p>here</p>
