--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
         <header class="nav MaxWH location flex flex_j_SB">
             <div>logo</div>
             <div class="nav-menu flex flex_j_SB MaxWH disp location">
-                <div>
-                    <p>here</p>
-                </div>
-                <div>
-                    <p>there</p>
-                </div>
-                <div>
-                    <p>where</p>
-                </div>
-                <div>
-                    <p>gear</p>
-                </div>
+                <ul class="flex flex_j_SB MaxWH">
+                    <li>
+                        <a href="#">here</a>
+                    </li>
+                    <li>
+                        <a href="#">there</a>
+                    </li>
+                    <li>
+                        <a href="#">where</a>
+                    </li>
+                    <li>
+                        <a href="#">gear</a>
+                    </li>
+                </ul>
             </div>
             <div class="nav-menu flex flex_j_SB MaxWH tiny flex_rowR location">
                 <a onclick="burgerMenu()">
@@ -34,24 +36,32 @@
         </header>
         <div class="gone flex_col" id="dropdown">
             <div class="nav-drop flex flex_Ai_SA location">
-                <div>
-                    <p>here</p>
-                </div>
+                <ul>
+                    <li>
+                        <a href="#">here</a>
+                    </li>
+                </ul>
             </div>
             <div class="nav-drop flex flex_Ai_SA location">
-                <div>
-                    <p>there</p>
-                </div>
+                <ul>
+                    <li>
+                        <a href="#">there</a>
+                    </li>
+                </ul>
             </div>
             <div class="nav-drop flex flex_Ai_SA location">
-                <div>
-                    <p>where</p>
-                </div>
+                <ul>
+                    <li>
+                        <a href="#">where</a>
+                    </li>
+                </ul>
             </div>
             <div class="nav-drop flex flex_Ai_SA location">
-                <div>
-                    <p>gear</p>
-                </div>
+                <ul>
+                    <li>
+                        <a href="#">gear</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <main>  
